[tool.poetry]
name = "ai-final-project"
version = "0.1.0"
description = ""
authors = ["Abdul Razzaq"]



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry.dependencies]
python = "~3.11"
transformers = {extras = ["torch"], version = ">=4.33.0"}
accelerate = ">=0.26.0"
torch = {version = ">=2.0.0", optional = true} 

click = "^8.0.1"
loguru = "^0.7.2"
rich = "^13.7.1"
numpy = "^1.26.4"
poethepoet = "0.29.0"


# Digital data ETL
selenium = "^4.21.0"
webdriver-manager = "^4.0.1"
beautifulsoup4 = "^4.12.3"
html2text = "^2024.2.26"
jmespath = "^1.0.1"
chromedriver-autoinstaller = "^0.6.4"

# Feature engineering
qdrant-client = "^1.8.0"
langchain = "^0.2.11"
sentence-transformers = "^3.0.0"

# RAG
langchain-openai = "^0.1.3"
jinja2 = "^3.1.4"
tiktoken = "^0.7.0"
fake-useragent = "^1.5.1"
langchain-community = "^0.2.11"

# Inference
uvicorn = "^0.30.6"
opik = "^0.2.2"
clearml = "^1.16.5"
youtube-transcript-api = "^0.6.3"
pymongo = "^4.10.1"
gradio = "^5.8.0"
datasets = "^3.1.0"
peft = "^0.14.0"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.9"
pre-commit = "^3.7.1"
pytest = "^8.2.2"


[tool.poe.tasks]
up = "docker-compose up -d"
down = "docker-compose down" 
start-clearml = "clearml-init" 
gradio-app = "python pipeline_Inference.py" 
etl-pipline = "poetry run python pipeline_ETL.py"
feature-engineering-pipeline = "poetry run poe pipeline_FeatureEngineering.py"
rag-inference = " poetry run poe pipeline_Inference.py "


rag-fine-tuning-start-ui= ["up","start-clearml"]
 

